--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,9 @@ theme:
 
 # =============== 插件 ===============
 plugins:
+  - mkdocs-jupyter:
+      include_source: true  # 保留下载源文件的链接
+      ignore_h1_titles: true  # 避免重复标题
   - search
   - blog
 
@@ -86,7 +89,10 @@ nav:
           - 分析化学2: md/note/chemistry/分析化学2.md
           - 结构与谱学1（现已改为结构化学1）: md/note/chemistry/结构与谱学.md
           - 普通化学实验: md/note/chemistry/普通化学实验.md
-  - 我的课程笔记: md/notes.md
+  - 我的课程笔记:
+      - 计算机:
+          - python:
+              - chap1-4: md/PY1.ipynb
   - 编曲/混音: 
     - 瞎写的一些东西: md/music/demo.md
     - 混音: md/music/混音.md
