--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -99,6 +99,7 @@ nav:
               - 数据载入、存储及文件格式: md/daanpy.ipynb
               - 数据清洗与准备: md/daanpy2.ipynb
               - 数据规整：连接、联合与重塑: md/daanpy3.ipynb
+              - 绘图与可视化: md/plt.ipynb
   - 编曲/混音: 
     - 瞎写的一些东西: md/music/demo.md
     - 混音: md/music/混音.md
